--- a/bundles/org.eclipse.ui/buildnotes_workbench.html
+++ b/bundles/org.eclipse.ui/buildnotes_workbench.html
@@ -12,6 +12,48 @@
 <h1>Eclipse Platform Build Notes (3.5)<br>
 JFace and Workbench</h1>
 
+<p>Integration Build (January 20, 2009, 7:35 a.m.)</p>
+  <p>Problem reports updated</p>
+  <p>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=41401">Bug 41401</a>. [Contributions] dynamic: Action definition style="pulldown" and retarget="true" does not work (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=111778">Bug 111778</a>. [Contributions] enablement expression in object contributions is parsed by legacy mechanism and new mechanism (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=122515">Bug 122515</a>. [CommonNavigator] CommonActionProvider should be made an API-level abstract class (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=122517">Bug 122517</a>. [CommonNavigator] CommonActionProvider should subclass ActionGroup (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=122518">Bug 122518</a>. [CommonNavigator] Improve CommonActionProvider's init() method (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=122520">Bug 122520</a>. [CommonNavigator] Open up INavigatorActionService as instantiatable API (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=122525">Bug 122525</a>. [CommonNavigator] Allow menu insertion points to be extensible per viewer (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=187137">Bug 187137</a>. [CommonNavigator] Project Explorer Link with Editor tooltip verbose and truncated (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=204837">Bug 204837</a>. [CommonNavigator] commonWizard with no pages displays empty dialog (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=211184">Bug 211184</a>. [Intro] [IntroAction] Causes NullPointerException when product intro binding no set (NEW)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=213139">Bug 213139</a>. [Markers] Forms in problems filtering configuration dialog doesn't grab vertical space (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=220557">Bug 220557</a>. [StatusHandling] Handling of jobs statuses needs polishing (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=222604">Bug 222604</a>. [CommonNavigator] adopt schema identifier from PDE (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=228110">Bug 228110</a>. [Markers] Problems view: Improve 'Warnings on Selection' (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=229355">Bug 229355</a>. [CommonNavigator] link "with" editor (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=231611">Bug 231611</a>. [Contributions] Provide a project configure context menu (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=231627">Bug 231627</a>. [Commands] Server view tool bar icons shows on welcome page (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=234245">Bug 234245</a>. [Metadata] Eclipse IDE application fails to start with com.ibm.icu.base plug-in (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=240159">Bug 240159</a>. [Markers] Creation Time column should be a timestamp in Problems view (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=243270">Bug 243270</a>. Add support for specifying Unicode locale extensions (ASSIGNED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=247294">Bug 247294</a>. [CommonNavigator] Project Explorer: ResourceDragAdapterAssistant always initiates drag of resources (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=249526">Bug 249526</a>. [DataBinding] API to track observables as they are created (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=250198">Bug 250198</a>. [CommonNavigator] Allow CommonNavigator to be subclassed (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=251195">Bug 251195</a>. [Markers] Quick fix is not available in Markers view (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=252732">Bug 252732</a>. [DataBinding] AssertionFailedException  while disposing DataBindingContext (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=254550">Bug 254550</a>. [IDE] NPE in SaveAsDialog when IDE not running (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=256561">Bug 256561</a>. [WorkingSets] Possibly broken code in ModifyWorkingSetDelegate.getItems() (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=258810">Bug 258810</a>. [Markers] Markers for the entire workspace show up when working set empty (NEW)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=259219">Bug 259219</a>. Double middle mouse click should not maximize (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=259553">Bug 259553</a>. [TabbedProperties] expensive refresh of text (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=259821">Bug 259821</a>. [Contributions] commandImages does not support 'platform:/plugin/' resource spec for icon (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=260329">Bug 260329</a>. [DataBinding] Overload DataBindingContext.bind<Value|List|Set> for null update strategy case (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=260572">Bug 260572</a>. Request preference to always open intro on startup (WONTFIX)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=260937">Bug 260937</a>. NPE in WorkbenchStatusDialogManager.addStatusAdapter() (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=261147">Bug 261147</a>. [CommonNavigator] Navigator label provider uses inconsistent methods to do the same thing (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=261164">Bug 261164</a>. [CommonNavigator] Add dynamic tracing for DnD (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=261513">Bug 261513</a>. [DataBinding] Error with ObservablesManager (FIXED)<br>
+  </p>
+
 <p>Integration Build (January 05, 2009, 3:00 p.m.)</p>
   <p>Problem reports updated</p>
   <p>
