--- a/bundles/org.eclipse.ui/buildnotes_workbench.html
+++ b/bundles/org.eclipse.ui/buildnotes_workbench.html
@@ -12,6 +12,64 @@
 <h1>Eclipse Platform Build Notes (3.5)<br>
 JFace and Workbench</h1>
 
+<p>Integration Build (January 25, 2009, 2:43 p.m.)</p>
+  <p>Problem reports updated</p>
+  <p>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=125437">Bug 125437</a>. [Commands] handlers: TextActionHandler does not properly maintain enablement of its delegate actions (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=162249">Bug 162249</a>. [Keybindings] key sequence for "pin editor" doesn't work (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=162630">Bug 162630</a>. [DataBinding] Issues with IDiff (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=188380">Bug 188380</a>. [EditorMgmt] Topmost editor not restored when editor area does not have focus on shutdown (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=188936">Bug 188936</a>. [Preferences] Other encoding drop down not disabled on spelling page (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=189490">Bug 189490</a>. [CommonNavigator] Go To->Resource won't enable (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=189492">Bug 189492</a>. [CommonNavigator] Project Explorer - Go Into won't enable (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=194734">Bug 194734</a>. [Databinding] Property-based observables (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=200214">Bug 200214</a>. [Viewers] TreeViewer performance issues (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=213893">Bug 213893</a>. [DataBinding] [Databinding] Add observables for Button#Text, Button#Image, Label#Image, CLabel#Image (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=215531">Bug 215531</a>. [DataBinding] Content providers should respect viewer's IElementComparer (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=217955">Bug 217955</a>. [WorkingSets] API to get the IWorkingSets that are part of an aggregating IWorkingSet (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=223266">Bug 223266</a>. [DataBinding] Refactor internal package names (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=230988">Bug 230988</a>. [Workbench] NPE in OpenNavigatorFolderTest (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=238296">Bug 238296</a>. [Databinding] Provide a possibility for ObservableListContentProvider redefine the ViewerUpdater (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=238299">Bug 238299</a>. [Viewers] Collapse All before expanding class/array suppresses display of all but first child node (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=241827">Bug 241827</a>. [DataBinding] EMF + Databinding -> NullPointerException (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=247758">Bug 247758</a>. [KeyBindings] Eclipse is unable to load key bindings (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=248343">Bug 248343</a>. [DataBinding] Snippet for ValidationStatusProvider implementation (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=248752">Bug 248752</a>. [KeyBindings] provide general platform transform for sequence modifiers in org.eclipse.ui.bindings (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=249441">Bug 249441</a>. [Commands] Cut, copy and paste commands enabled when nothing selected. (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=250807">Bug 250807</a>. [Markers] Delete handler in problems view should spawn a job (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=251611">Bug 251611</a>. [DataBinding] Databinding for Combo behaves differently in 3.4 (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=252290">Bug 252290</a>. [Databinding] Use int.class, ... instead of Integer.TYPE (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=252293">Bug 252293</a>. [CommonNavigator] LabelProviders do not obey override rules (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=255076">Bug 255076</a>. [EditorMgmt] File icon not updated when file changed (content change or move/rename) (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=256150">Bug 256150</a>. [DataBinding] Databinding of  Interfaces (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=256316">Bug 256316</a>. [EditorMgmt] getImageDescriptor() is not thread safe, has race condition (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=256422">Bug 256422</a>. [DataBinding] doSetValue in WritableValue (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=256543">Bug 256543</a>. [DataBinding] SWTObservables.observeText(SWT.DefaultSelection) (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=256764">Bug 256764</a>. [Viewers] Does DecoratingStyledCellLabelProvider add/remove the correct listener to/from the decorator (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=256889">Bug 256889</a>. [Viewers] [table] IAE (Index out of bounds) after selecting rows in virtual TableViewer (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=257094">Bug 257094</a>. [Markers] NPE in MarkerHelpRegistry (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=258352">Bug 258352</a>. [Progress] synchronization in ProgressManager too expensive (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=258736">Bug 258736</a>. [Viewers] [JFace] setUseHashLookUp() and multiple occurrences of same domain object in TreeViewer (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=258860">Bug 258860</a>. [Commands] ActionDelegateHandlerProxy never called for editor actions (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=258934">Bug 258934</a>. [Viewers] Improve CheckboxTreeViewer coverage (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=259380">Bug 259380</a>. [DataBinding] ViewersObservables.observeCheckedElements(...) does not work as expected with org.eclipse.ui.dialogs.ContainerCheckedTreeViewer (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=259536">Bug 259536</a>. [EditorMgmt] [Patch] Problems reloading a bundle (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=260904">Bug 260904</a>. API to capture the functionality of the new Customize Perspective Dialog (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=261348">Bug 261348</a>. [Dialogs] Set encoding dialog differs between workspace resources and revisions (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=261619">Bug 261619</a>. [Dialogs] FilteredTree: modifier keys should not change filter text (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=261640">Bug 261640</a>. Chkpii errors in N20090119-2000 (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=261752">Bug 261752</a>. [DataBinding] Test failure in recent N and I builds (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=261827">Bug 261827</a>. [Contexts] Cant remove context manager listener from ContextService (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=261843">Bug 261843</a>. [DataBinding] BeanProperties and PojoProperties have values(Class, String[]) but no values(String[]) methods (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=262068">Bug 262068</a>. [CommonNavigator] API tooling errors in org.eclipse.ui.navigator* (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=262101">Bug 262101</a>. [CommonNavigator] Make the  GoIntoActionProvider API so JDT can use it (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=262221">Bug 262221</a>. [DataBinding] ListBinding / UpdateListStrategy should use move() and set() where appropriate. (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=262222">Bug 262222</a>. [Workbench] Workbench.shutdown() doesn't complete due to exception (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=262269">Bug 262269</a>. [DataBinding] Need IdentitySet, IdentityMap and IdentityObservableSet classes (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=262302">Bug 262302</a>. [DataBinding] Delegating*Property.observe(Object) should let the delegate choose the default realm (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=262320">Bug 262320</a>. [DataBinding] SWTObservables.observeImage(Item) (FIXED)<br>
+  </p>
+
 <p>Integration Build (January 20, 2009, 7:35 a.m.)</p>
   <p>Problem reports updated</p>
   <p>
