--- a/bundles/org.eclipse.ui/buildnotes_workbench.html
+++ b/bundles/org.eclipse.ui/buildnotes_workbench.html
@@ -12,6 +12,11 @@
 <h1>Eclipse Platform Build Notes (3.5)<br>
 JFace and Workbench</h1>
 
+<p>Integration Build (Januar 26, 2009, 12:52 p.m.)</p>
+  <p>Problem reports updated</p>
+  <p>
+  </p>
+
 <p>Integration Build (January 25, 2009, 2:43 p.m.)</p>
   <p>Problem reports updated</p>
   <p>
