The map file has been updated for the following Bug changes: + Bug 176690. [Edit] The compare editor should be reconciled with other editors (FIXED) + Bug 257503. [Net] Switching to Native proxy provider doesn't clear system properties (FIXED) + Bug 258799. [Edit] Differences in the compare editor should have grey background (FIXED) + Bug 259408. [compare] Quick views should stay in compare editor if same CU (FIXED) + Bug 259422. DocLineComparator behaves ambiguous with empty file (FIXED) + Bug 260527. [compare] whitespace chars are black instead of gray (FIXED) + Bug 261802. [SSH2] Typo when overwriting private key on save (FIXED)
The following projects have changed:
org.eclipse.compare
org.eclipse.ui.net
org.eclipse.core.tests.net
org.eclipse.team.cvs.ui
org.eclipse.core.net
org.eclipse.compare.tests
org.eclipse.jsch.ui
org.eclipse.team.cvs.ssh2

--- a/bundles/org.eclipse.team.core/buildnotes_team.html
+++ b/bundles/org.eclipse.team.core/buildnotes_team.html
@@ -12,6 +12,18 @@
 <h1>Eclipse Platform Build Notes (3.5)<br>
 Team, Compare and CVS</h1>
 
+<p>Integration Build (January 26, 2009, 1:06 p.m.)</p>
+  <p>Problem reports updated</p>
+  <p>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=176690">Bug 176690</a>. [Edit] The compare editor should be reconciled with other editors (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=257503">Bug 257503</a>. [Net] Switching to Native proxy provider doesn't clear system properties (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=258799">Bug 258799</a>. [Edit] Differences in the compare editor should have grey background (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=259408">Bug 259408</a>. [compare] Quick views should stay in compare editor if same CU (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=259422">Bug 259422</a>. DocLineComparator behaves ambiguous with empty file (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=260527">Bug 260527</a>. [compare] whitespace chars are black instead of gray (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=261802">Bug 261802</a>. [SSH2] Typo when overwriting private key on save (FIXED)<br>
+  </p>
+
 <p>Integration Build (January 20, 2009, 1:32 p.m.)</p>
   <p>Problem reports updated</p>
   <p>
