--- a/bundles/org.eclipse.ui/buildnotes_workbench.html
+++ b/bundles/org.eclipse.ui/buildnotes_workbench.html
@@ -12,6 +12,14 @@
 <h1>Eclipse Platform Build Notes (3.5)<br>
 JFace and Workbench</h1>
 
+<p>Integration Build (January 26, 2009, 12:44 p.m.)</p>
+  <p>Problem reports updated</p>
+  <p>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=175735">Bug 175735</a>. [DataBinding] DuplexingObservableValue (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=262364">Bug 262364</a>. [CommonNavigator] SWTException: Graphic is disposed while running the navigator tests (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=262392">Bug 262392</a>. [DataBinding] CompositeMap constructor should use this.firstMap (FIXED)<br>
+  </p>
+
 <p>Integration Build (Januar 26, 2009, 12:52 p.m.)</p>
   <p>Problem reports updated</p>
   <p>
