*** empty log message ***

--- a/bundles/org.eclipse.ui/buildnotes_workbench.html
+++ b/bundles/org.eclipse.ui/buildnotes_workbench.html
@@ -12,6 +12,13 @@
 <h1>Eclipse Platform Build Notes (3.5)<br>
 JFace and Workbench</h1>
 
+<p>Integration Build (January 26, 2009, 2:53 p.m.)</p>
+  <p>Problem reports updated</p>
+  <p>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=261861">Bug 261861</a>. [Markers] QuickFix dialog doesn't show Location properly (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=262380">Bug 262380</a>. [Common Navigator] Test failure on Mac, I20090125-2000 (FIXED)<br>
+  </p>
+
 <p>Integration Build (January 26, 2009, 12:44 p.m.)</p>
   <p>Problem reports updated</p>
   <p>
