--- a/bundles/org.eclipse.ui/buildnotes_workbench.html
+++ b/bundles/org.eclipse.ui/buildnotes_workbench.html
@@ -12,6 +12,14 @@
 <h1>Eclipse Platform Build Notes (3.3)<br>
 JFace and Workbench</h1>
 
+<p>Integration Build (January 27, 2009, 2:03 p.m.)</p>
+  <p>Problem reports updated</p>
+  <p>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=259553">Bug 259553</a>. [TabbedProperties] expensive refresh of text (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=260937">Bug 260937</a>. NPE in WorkbenchStatusDialogManager.addStatusAdapter() (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=262455">Bug 262455</a>. Increment version numbers (service segment) for 3.4.2 (NEW)<br>
+  </p>
+
 <p>Integration Build (January 14, 2009, 7:45 a.m.)</p>
   <p>Problem reports updated</p>
   <p>
