--- a/bundles/org.eclipse.ui/buildnotes_workbench.html
+++ b/bundles/org.eclipse.ui/buildnotes_workbench.html
@@ -12,6 +12,14 @@
 <h1>Eclipse Platform Build Notes (3.5)<br>
 JFace and Workbench</h1>
 
+<p>Integration Build (January 27, 2009, 8:39 p.m.)</p>
+  <p>Problem reports updated</p>
+  <p>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=200214">Bug 200214</a>. [Viewers] TreeViewer performance issues (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=222604">Bug 222604</a>. [CommonNavigator] adopt schema identifier from PDE (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=262706">Bug 262706</a>. [CommonNavigator] Sorter inconsistently uses possible children instead of trigger points (FIXED)<br>
+  </p>
+
 <p>Integration Build (January 27, 2009, 8:37 p.m.)</p>
   <p>Problem reports updated</p>
   <p>
