Build input for I20090128-0800.

--- a/bundles/org.eclipse.ui/buildnotes_workbench.html
+++ b/bundles/org.eclipse.ui/buildnotes_workbench.html
@@ -12,6 +12,12 @@
 <h1>Eclipse Platform Build Notes (3.5)<br>
 JFace and Workbench</h1>
 
+<p>Integration Build (Januar 28, 2009, 9:25 a.m.)</p>
+  <p>Problem reports updated</p>
+  <p>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=262613">Bug 262613</a>. [FilteredTree] Image leak in FilteredTree (NEW)<br>
+  </p>
+
 <p>Integration Build (January 27, 2009, 8:39 p.m.)</p>
   <p>Problem reports updated</p>
   <p>
