The map file has been updated for the following Bug changes: + Bug 261850. [Wizards] Sharing project wizard doesn't work as expected (FIXED) + Bug 262551. Setting selection via selection provider should reveal the selection (FIXED) + Bug 262558. Compiler warning in I20090126-0800 (FIXED) + Bug 262640. NPE in JavaMergeViewer (TextMergeViewer.updateResolveStatus) (FIXED)
The following projects have changed:
org.eclipse.compare
org.eclipse.team.cvs.ui

--- a/bundles/org.eclipse.team.core/buildnotes_team.html
+++ b/bundles/org.eclipse.team.core/buildnotes_team.html
@@ -12,6 +12,15 @@
 <h1>Eclipse Platform Build Notes (3.5)<br>
 Team, Compare and CVS</h1>
 
+<p>Integration Build (January 28, 2009, 1:45 p.m.)</p>
+  <p>Problem reports updated</p>
+  <p>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=261850">Bug 261850</a>. [Wizards] Sharing project wizard doesn't work as expected (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=262551">Bug 262551</a>. Setting selection via selection provider should reveal the selection (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=262558">Bug 262558</a>. Compiler warning in I20090126-0800 (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=262640">Bug 262640</a>. NPE in JavaMergeViewer (TextMergeViewer.updateResolveStatus) (FIXED)<br>
+  </p>
+
 <p>Integration Build (January 26, 2009, 1:06 p.m.)</p>
   <p>Problem reports updated</p>
   <p>
