--- a/bundles/org.eclipse.ui/buildnotes_workbench.html
+++ b/bundles/org.eclipse.ui/buildnotes_workbench.html
@@ -12,6 +12,16 @@
 <h1>Eclipse Platform Build Notes (3.5)<br>
 JFace and Workbench</h1>
 
+<p>Integration Build (January 28, 2009, 9:29 p.m.)</p>
+  <p>Problem reports updated</p>
+  <p>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=222604">Bug 222604</a>. [CommonNavigator] adopt schema identifier from PDE (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=262578">Bug 262578</a>. [CommonNavigator] Extension point description is not aligned with recent changes to possibleChildren/triggerPoints handling (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=262606">Bug 262606</a>. [CommonNavigator] Up button after "go into" has bad tooltip text (ASSIGNED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=262619">Bug 262619</a>. [Perspectives] 28 images leaked opening customize perspective dialog (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=262707">Bug 262707</a>. [CommonNavigator] CommonViewerSorter gets NPE when misconfigured (FIXED)<br>
+  </p>
+
 <p>Integration Build (Januar 28, 2009, 9:25 a.m.)</p>
   <p>Problem reports updated</p>
   <p>
