--- a/bundles/org.eclipse.ui/buildnotes_workbench.html
+++ b/bundles/org.eclipse.ui/buildnotes_workbench.html
@@ -12,6 +12,12 @@
 <h1>Eclipse Platform Build Notes (3.5)<br>
 JFace and Workbench</h1>
 
+<p>Integration Build (Januar 29, 2009, 3:44 p.m.)</p>
+  <p>Problem reports updated</p>
+  <p>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=222604">Bug 222604</a>. [CommonNavigator] adopt schema identifier from PDE (FIXED)<br>
+  </p>
+
 <p>Integration Build (January 28, 2009, 9:29 p.m.)</p>
   <p>Problem reports updated</p>
   <p>
