--- a/org.eclipse.debug.core/buildnotes_platform-debug.html
+++ b/org.eclipse.debug.core/buildnotes_platform-debug.html
@@ -96,6 +96,7 @@ value is no longer reliable.</p>
 
 <h2>3.5 M5 - January 30, 2009</h2>
 <h3>Problem Reports Fixed</h3>
+<a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=262819">Bug 262819</a>: 'process model delta' job appears in progress view/status bar<br>
 <a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=260802">Bug 260802</a>: Retargetable debug actions do not enable when an adapter is first loaded.<br>
 <a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=247990">Bug 247990</a>: [breakpoints] Breakpoint working set not updated properly after import<br>
 <a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=255644">Bug 255644</a>: chkpii error in N20081117-2000<br>
@@ -103,6 +104,7 @@ value is no longer reliable.</p>
 
 <h2>January 20, 2009</h2>
 <h3>Problem Reports Fixed</h3>
+<a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=261567">Bug 261567</a>: [launching] ILaunchConfiguration's getLocation returns different values at different times<br>
 <a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=261214">Bug 261214</a>: Console view: Opening drop-down of console switcher button already switches consoles<br>
 
 <h2>January 6, 2008</h2>
