--- a/ant/org.eclipse.ant.core/buildnotes_platform-ant.html
+++ b/ant/org.eclipse.ant.core/buildnotes_platform-ant.html
@@ -15,6 +15,10 @@ Eclipse 3.5 Ant Build Notes</h1>
   <li>Added API constants for Ant launch configuration attributes - <code>org.eclipse.ant.ui.launching.IAntLaunchConfigurationConstants</code>.</li>
 </ul>
 
+<h2>February 3, 2009</h2>
+<h3>Problem Reports Fixed</h3>
+<a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=218074">Bug 218074</a>: button label truncations on External Tools Builders config dialog<br>
+
 <h2>3.5 M5 - January 30, 2009</h2>
 <h3>Problem Reports Fixed</h3>
 <a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=262378">Bug 262378</a>: Ant test suite does not handle dynamic plugin version length<br>
