*** empty log message ***

--- a/bundles/org.eclipse.ui/buildnotes_workbench.html
+++ b/bundles/org.eclipse.ui/buildnotes_workbench.html
@@ -12,6 +12,23 @@
 <h1>Eclipse Platform Build Notes (3.5)<br>
 JFace and Workbench</h1>
 
+<p>Integration Build (February 03, 2009, 11:36 a.m.)</p>
+  <p>Problem reports updated</p>
+  <p>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=135971">Bug 135971</a>. [CommonNavigator] Project Explorer: cannot drop to Hierarchy view (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=213893">Bug 213893</a>. [DataBinding] Add observables for Button#Text, Button#Image, Label#Image, CLabel#Image (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=252561">Bug 252561</a>. [Wizards] WizardNewProjectCreationPage and WorkingSetConfigurationBlock needs to update its deprecated comments (NEW)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=255012">Bug 255012</a>. [Preferences] PreferenceDialog.handleSave() not called on Apply (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=255734">Bug 255734</a>. [DataBinding] DecoratingObservable should self-dispose when the decorated observable is disposed (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=261506">Bug 261506</a>. [CommonNavigator] NavigatorDNDService seems like it can use only interfaces (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=262877">Bug 262877</a>. The JavaModel object needs to be handled by the JavaNavigatorLabelProvider (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=262946">Bug 262946</a>. [DataBinding] WidgetProperties.tooltipText() observes the text property instead of tooltipText (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=263100">Bug 263100</a>. [DataBinding] TitleAreaDialogSupport documentation nits (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=263207">Bug 263207</a>. [CommonNavigator] Improve DnD tracing and add DnD test suite (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=263413">Bug 263413</a>. [DataBinding] Widget<Value|List>Property and Viewer<Value|Set|List>Property should be public (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=263425">Bug 263425</a>. [CommonNavigator] Errors in org.eclipse.ui.navigator (FIXED)<br>
+  </p>
+
 <p>Integration Build (January 29, 2009, 2:10 p.m.)</p>
   <p>Problem reports updated</p>
   <p>
