--- a/bundles/org.eclipse.ui/buildnotes_workbench.html
+++ b/bundles/org.eclipse.ui/buildnotes_workbench.html
@@ -12,6 +12,12 @@
 <h1>Eclipse Platform Build Notes (3.3)<br>
 JFace and Workbench</h1>
 
+<p>Integration Build (February 03, 2009, 2:10 p.m.)</p>
+  <p>Problem reports updated</p>
+  <p>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=241640">Bug 241640</a>. [ui] Multiple (3) "Software Updates" menu items  in Help menu (ASSIGNED)<br>
+  </p>
+
 <p>Integration Build (January 27, 2009, 2:03 p.m.)</p>
   <p>Problem reports updated</p>
   <p>
