--- a/org.eclipse.debug.core/buildnotes_platform-debug.html
+++ b/org.eclipse.debug.core/buildnotes_platform-debug.html
@@ -98,6 +98,7 @@ value is no longer reliable.</p>
 <h3>Problem Reports Fixed</h3>
 <a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=263881">Bug 263881</a>: SourceLookupFacility selects editor region when stack frame provides CharStart  value &gt; -1<br>
 <a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=262814">Bug 262814</a>: Class Cast exception when Expression view has expressions defined by non-Java debug session<br>
+<a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=221234">Bug 221234</a>: [console] Programs with lots of output cause major eclipse unresponsiveness with large console buffer<br>
 
 <h2>3.5 M5 - January 30, 2009</h2>
 <h3>Problem Reports Fixed</h3>
