The map file has been updated for the following Bug changes: + Bug 87390. [Tags] Warn when entering future date tag (FIXED) + Bug 235848. [Preferences] Password Management page seems to be obsolete (FIXED) + Bug 238877. [Wizards] Team/"Share Project" with an existing one does not support CVS-branches anymore (FIXED) + Bug 247943. [Tests] Move linereaderdata folder out of the src folder (FIXED) + Bug 260541. [Proxy] Eclipse CVS connections fail with the "Eclipse" Proxy provider (ASSIGNED) + Bug 261357. EditionSelectionDialog.Pair has equals(Object) and hence needs hashCode() (FIXED) + Bug 262642. [Repo View] Add filter to hide modules (FIXED) + Bug 263452. [Edit] Binary Compare label is missing (FIXED) + Bug 263459. Add @noreference to CompareViewerSwitchingPane.setTitleArgument (FIXED) + Bug 263479. ModelSynchronizeParticipant#refreshSchedule declared as non-API type SubscriberRefreshSchedule (FIXED) + Bug 263621. Leaking API in SubscriberParticipant (FIXED) + Bug 263631. Leaking API in ThreeWaySynchronizer (FIXED) + Bug 263645. Leaking API in SyncInfoSet and SyncInfoTree (FIXED) + Bug 263646. SubscriberParticipant.getSubscriberSyncInfoCollector() has non-API return type SubscriberSyncInfoCollector (FIXED)
The following projects have changed:
org.eclipse.compare
org.eclipse.team.cvs.ui
org.eclipse.core.net
org.eclipse.compare.tests
org.eclipse.team.examples.filesystem
org.eclipse.team.ui
org.eclipse.team.cvs.ssh
org.eclipse.team.core

--- a/bundles/org.eclipse.team.core/buildnotes_team.html
+++ b/bundles/org.eclipse.team.core/buildnotes_team.html
@@ -12,6 +12,25 @@
 <h1>Eclipse Platform Build Notes (3.5)<br>
 Team, Compare and CVS</h1>
 
+<p>Integration Build (February 10, 2009, 12:08 p.m.)</p>
+  <p>Problem reports updated</p>
+  <p>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=87390">Bug 87390</a>. [Tags] Warn when entering future date tag (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=235848">Bug 235848</a>. [Preferences] Password Management page seems to be obsolete (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=238877">Bug 238877</a>. [Wizards] Team/"Share Project" with an existing one does not support CVS-branches anymore (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=247943">Bug 247943</a>. [Tests] Move linereaderdata folder out of the src folder (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=260541">Bug 260541</a>. [Proxy] Eclipse CVS connections fail with the "Eclipse" Proxy provider (ASSIGNED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=261357">Bug 261357</a>. EditionSelectionDialog.Pair has equals(Object) and hence needs hashCode() (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=262642">Bug 262642</a>. [Repo View] Add filter to hide modules (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=263452">Bug 263452</a>. [Edit] Binary Compare label is missing (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=263459">Bug 263459</a>. Add @noreference to CompareViewerSwitchingPane.setTitleArgument (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=263479">Bug 263479</a>. ModelSynchronizeParticipant#refreshSchedule declared as non-API type SubscriberRefreshSchedule (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=263621">Bug 263621</a>. Leaking API in SubscriberParticipant (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=263631">Bug 263631</a>. Leaking API in ThreeWaySynchronizer (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=263645">Bug 263645</a>. Leaking API in SyncInfoSet and SyncInfoTree (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=263646">Bug 263646</a>. SubscriberParticipant.getSubscriberSyncInfoCollector() has non-API return type SubscriberSyncInfoCollector (FIXED)<br>
+  </p>
+
 <p>Integration Build (January 28, 2009, 1:45 p.m.)</p>
   <p>Problem reports updated</p>
   <p>
