--- a/bundles/org.eclipse.team.core/buildnotes_team.html
+++ b/bundles/org.eclipse.team.core/buildnotes_team.html
@@ -12,6 +12,12 @@
 <h1>Eclipse Platform Build Notes (3.5)<br>
 Team, Compare and CVS</h1>
 
+<p>Integration Build (February 10, 2009, 12:14 p.m.)</p>
+  <p>Problem reports updated</p>
+  <p>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=235848">Bug 235848</a>. [Preferences] Password Management page seems to be obsolete (FIXED)<br>
+  </p>
+
 <p>Integration Build (February 10, 2009, 12:08 p.m.)</p>
   <p>Problem reports updated</p>
   <p>
