The map file has been updated for the following Bug changes: + Bug 264484. Test failures in I20090210-0950 (FIXED)
The following projects have changed:
org.eclipse.team.core

--- a/bundles/org.eclipse.team.core/buildnotes_team.html
+++ b/bundles/org.eclipse.team.core/buildnotes_team.html
@@ -12,6 +12,12 @@
 <h1>Eclipse Platform Build Notes (3.5)<br>
 Team, Compare and CVS</h1>
 
+<p>Integration Build (February 11, 2009, 11:40 a.m.)</p>
+  <p>Problem reports updated</p>
+  <p>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=264484">Bug 264484</a>. Test failures in I20090210-0950 (FIXED)<br>
+  </p>
+
 <p>Integration Build (February 10, 2009, 12:14 p.m.)</p>
   <p>Problem reports updated</p>
   <p>
