The map file has been updated for the following Bug changes: + Bug 172336. [Apply Patch] Provide core level API (FIXED) + Bug 181919. LineReader creating unneeded garbage (FIXED) + Bug 183230. [Apply Patch] Add file dates to IFilePatch (FIXED) + Bug 183238. [Apply Patch] API to get IHunks from IFilePatch and select which of them to apply (FIXED) + Bug 207704. Decouple org.eclipse.compare from UI (FIXED) + Bug 225122. Adopt API Tooling by Compare (FIXED) + Bug 235330. Copyright update for 3.4 (FIXED) + Bug 254764. [Patch] PreviewPatchPage2 leaks a FormToolkit (FIXED) + Bug 263630. Warnings in TeamUIPlugin (FIXED) + Bug 263943. Make core.compare independent of core.resource - was: Provide RangeDifferencer API in the compare core plug-in (FIXED) + Bug 264357. Remove copy of ListDialog, use API (FIXED) + Bug 265129. Fix compile warnings in compare.core (FIXED)
The following projects have changed:
org.eclipse.compare
org.eclipse.compare.core
org.eclipse.compare.tests
org.eclipse.team.ui

--- a/bundles/org.eclipse.team.core/buildnotes_team.html
+++ b/bundles/org.eclipse.team.core/buildnotes_team.html
@@ -12,6 +12,23 @@
 <h1>Eclipse Platform Build Notes (3.5)<br>
 Team, Compare and CVS</h1>
 
+<p>Integration Build (February 17, 2009, 1:37 p.m.)</p>
+  <p>Problem reports updated</p>
+  <p>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=172336">Bug 172336</a>. [Apply Patch] Provide core level API (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=181919">Bug 181919</a>. LineReader creating unneeded garbage (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=183230">Bug 183230</a>. [Apply Patch] Add file dates to IFilePatch (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=183238">Bug 183238</a>. [Apply Patch] API to get IHunks from IFilePatch and select which of them to apply (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=207704">Bug 207704</a>. Decouple org.eclipse.compare from UI (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=225122">Bug 225122</a>. Adopt API Tooling by Compare (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=235330">Bug 235330</a>. Copyright update for 3.4 (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=254764">Bug 254764</a>. [Patch] PreviewPatchPage2 leaks a FormToolkit (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=263630">Bug 263630</a>. Warnings in TeamUIPlugin (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=263943">Bug 263943</a>. Make core.compare independent of core.resource - was: Provide RangeDifferencer API in the compare core plug-in (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=264357">Bug 264357</a>. Remove copy of ListDialog, use API (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=265129">Bug 265129</a>. Fix compile warnings in compare.core (FIXED)<br>
+  </p>
+
 <p>Integration Build (February 11, 2009, 11:40 a.m.)</p>
   <p>Problem reports updated</p>
   <p>
